dob fixed alignment home screen fixed

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -19,13 +19,12 @@
                 android:id="@+id/todoTaskName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="16dp"
                 android:fontFamily="@font/montserrat"
+                android:layout_margin="15dp"
                 android:text="@string/title"
                 android:textColor="@color/black"
                 android:textSize="18sp"
+                android:padding="15dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -35,15 +34,10 @@
                 android:id="@+id/description"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_margin="15dp"
                 android:fontFamily="@font/montserrat"
                 android:lineSpacingExtra="4dp"
-                android:paddingStart="4dp"
-                android:paddingTop="4dp"
-                android:paddingEnd="4dp"
-                android:paddingBottom="16dp"
+               android:padding="15dp"
                 android:text="The covid-19 active caseload plunged to almost 4 lakh after 138 days. The total coronavirus cases mounted to 9644222 with 36011 new infections being reported in a day, while the death toll crossed to 1.40 lakh "
                 android:textColor="@color/textGrey"
                 android:textSize="14sp"
