--- a/app/src/main/res/layout/fragment_todo_details.xml
+++ b/app/src/main/res/layout/fragment_todo_details.xml
@@ -42,11 +42,8 @@
                         android:id="@+id/todoTaskName"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="40dp"
-                        android:layout_marginEnd="20dp"
-                        android:layout_marginRight="20dp"
+                        android:layout_margin="15dp"
+                        android:padding="10dp"
                         android:textColor="@color/black"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -58,8 +55,8 @@
                         android:id="@+id/description"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_margin="10dp"
+                        android:padding="15dp"
                         android:text="@{todoDetailsViewModel.description.toString()}"
                         android:textSize="15sp"
                         app:layout_constraintEnd_toEndOf="parent"
