--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -25,7 +25,7 @@
             android:contentDescription="@string/video_name"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:background="@drawable/ic_video_title" />
+            android:background="@drawable/ic_video_title" />
 
         <TextView
             android:id="@+id/textView"
