Added Some Permission And Added Color file status:Successfully

--- a/app/src/main/res/layout/storage_screen_fragment.xml
+++ b/app/src/main/res/layout/storage_screen_fragment.xml
@@ -86,6 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="10dp"
+            android:backgroundTint="@color/cheery_red"
             android:text="@string/file_explore_name"
             android:textAllCaps="false"
             app:layout_constraintLeft_toLeftOf="@id/uploaderAssignmentCollection"
@@ -98,6 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="10dp"
+            android:backgroundTint="@color/teal_700"
             android:text="@string/assignment_explore_name"
             android:textAllCaps="false"
             app:layout_constraintLeft_toLeftOf="@id/uploaderAssignmentCollection"
@@ -135,6 +137,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="9dp"
+            android:backgroundTint="@color/color_red"
             android:layout_marginBottom="9dp"
             android:text="@string/upload_File_name"
             android:textAllCaps="false"
