--- a/app/src/main/res/navigation/admin_ui_graph.xml
+++ b/app/src/main/res/navigation/admin_ui_graph.xml
@@ -14,7 +14,11 @@
         android:id="@+id/cloudStorageFragment"
         android:name="com.example.hackingwork.ui.CloudStorageFragment"
         android:label="@string/cloud_Screen_app"
-        tools:layout="@layout/cloud_storage_fragment" />
+        tools:layout="@layout/cloud_storage_fragment" >
+        <action
+            android:id="@+id/action_cloudStorageFragment_to_uploadCourseFragment"
+            app:destination="@id/uploadCourseFragment" />
+    </fragment>
     <dialog
         android:id="@+id/passwordDialog"
         android:name="com.example.hackingwork.utils.PasswordDialog"
@@ -35,4 +39,13 @@
     <action
         android:id="@+id/action_global_passwordDialog2"
         app:destination="@id/passwordDialog" />
+    <fragment
+        android:id="@+id/uploadCourseFragment"
+        android:name="com.example.hackingwork.ui.course.UploadCourseFragment"
+        android:label="upload_course_layout"
+        tools:layout="@layout/upload_course_layout" >
+        <argument
+            android:name="SKJD"
+            app:argType="reference" />
+    </fragment>
 </navigation>
