--- a/app/src/main/res/layout/cloud_storage_fragment.xml
+++ b/app/src/main/res/layout/cloud_storage_fragment.xml
@@ -16,7 +16,6 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:hint="@string/course_name"
             android:textColorHint="@color/black"
             app:boxStrokeColor="@color/black"
@@ -179,11 +178,39 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:backgroundTint="@color/color_red"
             android:text="@string/course_create"
             android:textAllCaps="false"
-            android:backgroundTint="@color/color_red"
+            android:textColor="@color/black"
             app:layout_constraintLeft_toLeftOf="@id/CourseDiscountPriceLayout"
             app:layout_constraintRight_toRightOf="@id/CourseDiscountPriceLayout"
             app:layout_constraintTop_toBottomOf="@id/CourseDiscountPriceLayout" />
+
+        <Button
+            android:id="@+id/UpdateCourse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/color_yellow"
+            android:text="@string/course_update"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            app:layout_constraintLeft_toLeftOf="@id/CreateCourse"
+            app:layout_constraintRight_toRightOf="@id/CreateCourse"
+            app:layout_constraintTop_toBottomOf="@id/CreateCourse" />
+
+        <Button
+            android:id="@+id/Add_New_Module"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/color_green"
+            android:text="@string/course_module"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            app:layout_constraintRight_toRightOf="@id/UpdateCourse"
+            app:layout_constraintLeft_toLeftOf="@id/UpdateCourse"
+            app:layout_constraintTop_toBottomOf="@id/UpdateCourse" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
