--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
 
     <!-- App Color -->
     <color name="cheery_red">#ee5c3f</color>
+    <color name="color_yellow">#F9D827</color>
+    <color name="color_green">#62E80C</color>
     <color name="color_red">#D50000</color>
     <color name="trans_parent_btn_color">#00000000</color>
     <color name="otp_box_bg">#65EAEAEA</color>
