--- a/app/src/main/res/layout/add_user_course_fragment.xml
+++ b/app/src/main/res/layout/add_user_course_fragment.xml
@@ -112,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:backgroundTint="@color/color_red"
+            android:backgroundTint="@color/color_green"
             android:text="@string/add_cou"
             android:textAllCaps="false"
             android:textColor="@color/black"
@@ -125,7 +125,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:backgroundTint="@color/color_yellow"
+            android:backgroundTint="@color/color_red"
             android:text="@string/add_del"
             android:textAllCaps="false"
             android:textColor="@color/black"
